update all pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ООО АКСТА — Оборудование, инструмент, технологии</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <meta name="description" content="ООО АКСТА - поставка металлообрабатывающего оборудования и инструмента от ведущих производителей. Гарантия, сервис, обучение.">
+    <meta name="keywords" content="станки, оборудование, инструмент, металлообработка, ЧПУ, фрезерные, токарные">
+    <meta property="og:title" content="ООО АКСТА — Оборудование, инструмент, технологии">
+    <meta property="og:description" content="Поставки металлообрабатывающего оборудования от ведущих заводов Китая, Японии, Кореи">
+    <meta property="og:type" content="website">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <script defer src="assets/js/main.js"></script>
     <!-- Дизайн вдохновлён: https://www.behance.net/gallery/170357099/Industrial-Equipment-Website-Design -->
     <!-- Кнопка темы: https://uiverse.io/ -->
 </head>
@@ -17,13 +22,13 @@
         </div>
         <nav class="nav">
             <a href="index.html">Главная</a>
-            <a href="catalog.html">Каталог</a>
-            <a href="tools.html">Инструмент</a>
-            <a href="service.html">Сервис</a>
-            <a href="education.html">Обучение</a>
-            <a href="news.html">Новости</a>
-            <a href="cart.html">Корзина</a>
-            <a href="anketa.html">Анкета</a>
+            <a href="pages/catalog.html">Каталог</a>
+            <a href="pages/tools.html">Инструмент</a>
+            <a href="pages/service.html">Сервис</a>
+            <a href="pages/education.html">Обучение</a>
+            <a href="pages/news.html">Новости</a>
+            <a href="pages/cart.html">Корзина</a>
+            <a href="pages/anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
         </nav>
     </header>
@@ -31,7 +36,7 @@
         <section class="hero">
             <h1>Металлообрабатывающее оборудование, инструмент и сервис</h1>
             <p>Поставки от ведущих заводов Китая, Японии, Кореи. Гарантия, сервис, обучение, индивидуальный подход.</p>
-            <a href="anketa.html" class="btn-main">Оставить заявку</a>
+            <a href="pages/anketa.html" class="btn-main">Оставить заявку</a>
         </section>
         <section id="about" class="about">
             <h2>О компании</h2>
@@ -49,12 +54,12 @@
                 <div class="catalog-card">
                     <h3>Станки</h3>
                     <p>Фрезерные, токарные, шлифовальные, портальные, ЧПУ</p>
-                    <a href="catalog.html" class="btn-secondary">Смотреть каталог</a>
+                    <a href="pages/catalog.html" class="btn-secondary">Смотреть каталог</a>
                 </div>
                 <div class="catalog-card">
                     <h3>Инструмент</h3>
                     <p>Металлорежущий инструмент, оснастка, расходники</p>
-                    <a href="tools.html" class="btn-secondary">Подробнее</a>
+                    <a href="pages/tools.html" class="btn-secondary">Подробнее</a>
                 </div>
             </div>
         </section>
@@ -70,7 +75,7 @@
         <section id="education" class="education-preview">
             <h2>Обучение</h2>
             <p>Статьи, видео, обучающие материалы для специалистов и инженеров.</p>
-            <a href="education.html" class="btn-secondary">Перейти к обучению</a>
+            <a href="pages/education.html" class="btn-secondary">Перейти к обучению</a>
         </section>
         <section id="contacts" class="contacts">
             <h2>Контакты</h2>
@@ -83,4 +88,4 @@
         <span>Сделано с любовью и вниманием к деталям</span>
     </footer>
 </body>
-</html> 
+</html>
