modified:   pages/anketa.html 	modified:   pages/cart.html 	modified:   pages/catalog.html 	modified:   pages/education.html 	modified:   pages/news.html 	modified:   pages/service.html 	modified:   pages/tools.html

--- a/pages/education.html
+++ b/pages/education.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обучение | ООО АКСТА</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
         </div>
         <nav class="nav">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="catalog.html">Каталог</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
@@ -26,37 +26,32 @@
         </nav>
     </header>
     <main>
-        <section class="education-main">
-            <h1>Обучение</h1>
-            <p>Здесь вы найдёте полезные материалы для специалистов и инженеров: статьи, видео, обучающие инструкции по работе с оборудованием и инструментом.</p>
-            <div class="education-blocks">
-                <div class="education-block">
-                    <h2>Статьи</h2>
-                    <ul>
-                        <li><a href="#">Как выбрать металлообрабатывающее оборудование</a></li>
-                        <li><a href="#">Советы по эксплуатации станков</a></li>
-                        <li><a href="#">Инженерные решения для производства</a></li>
-                    </ul>
+        <section class="hero">
+            <h1>Обучение и материалы</h1>
+            <p>Статьи, видео и обучающие материалы для специалистов</p>
+        </section>
+        <section class="education-preview">
+            <div class="catalog-cards">
+                <div class="catalog-card">
+                    <h3>Видеоуроки</h3>
+                    <p>Обучающие видео по работе с оборудованием</p>
+                    <a href="#" class="btn-secondary">Смотреть</a>
                 </div>
-                <div class="education-block">
-                    <h2>Видео</h2>
-                    <ul>
-                        <li><a href="#">Обзор оборудования</a></li>
-                        <li><a href="#">Пуско-наладка и обслуживание</a></li>
-                        <li><a href="#">Обучающие ролики для специалистов</a></li>
-                    </ul>
+                <div class="catalog-card">
+                    <h3>Технические статьи</h3>
+                    <p>Полезные материалы для инженеров</p>
+                    <a href="#" class="btn-secondary">Читать</a>
                 </div>
-                <div class="education-block">
-                    <h2>Инструкции</h2>
-                    <ul>
-                        <li><a href="#">Руководства по эксплуатации</a></li>
-                        <li><a href="#">Техническая документация</a></li>
-                        <li><a href="#">Часто задаваемые вопросы</a></li>
-                    </ul>
+                <div class="catalog-card">
+                    <h3>Инструкции</h3>
+                    <p>Руководства по эксплуатации</p>
+                    <a href="#" class="btn-secondary">Скачать</a>
                 </div>
-            </div>
-            <div class="education-contact">
-                <p>Если у вас есть вопросы или предложения по обучающим материалам, свяжитесь с нами:<br>Яна<br>+7 963 135 48 37<br><a href="mailto:sale_aksta@stankirb.ru">sale_aksta@stankirb.ru</a></p>
+                <div class="catalog-card">
+                    <h3>Обучение персонала</h3>
+                    <p>Профессиональные курсы</p>
+                    <a href="anketa.html" class="btn-secondary">Записаться</a>
+                </div>
             </div>
         </section>
     </main>
@@ -65,4 +60,4 @@
         <span>Сделано с любовью и вниманием к деталям</span>
     </footer>
 </body>
-</html> 
+</html>
