--- a/pages/service.html
+++ b/pages/service.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сервис и поддержка | ООО АКСТА</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <title>Сервис | ООО АКСТА</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
         </div>
         <nav class="nav">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="catalog.html">Каталог</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
@@ -26,30 +26,32 @@
         </nav>
     </header>
     <main>
-        <section class="service-main">
-            <h1>Сервис и поддержка</h1>
-            <p>Мы предлагаем полный комплекс сервисных услуг для вашего оборудования:</p>
-            <ul class="service-list">
-                <li>Гарантийное и постгарантийное обслуживание</li>
-                <li>Пуско-наладка, шеф-монтаж</li>
-                <li>Доставка до клиента</li>
-                <li>Обучение персонала</li>
-                <li>Лизинг оборудования (от 9%)</li>
-                <li>Поставка запасных частей</li>
-                <li>Постпродажное обслуживание</li>
-            </ul>
-            <div class="service-extra">
-                <h2>Почему выбирают нас?</h2>
-                <ul>
-                    <li>Оперативная поддержка и консультации</li>
-                    <li>Высококвалифицированные инженеры и сервисные специалисты</li>
-                    <li>Индивидуальный подход к каждому клиенту</li>
-                    <li>Гарантия качества и прозрачные условия сотрудничества</li>
-                </ul>
-            </div>
-            <div class="service-contact">
-                <h2>Связаться с сервисной службой</h2>
-                <p>Яна<br>+7 963 135 48 37<br><a href="mailto:sale_aksta@stankirb.ru">sale_aksta@stankirb.ru</a></p>
+        <section class="hero">
+            <h1>Сервисное обслуживание</h1>
+            <p>Полный цикл технической поддержки вашего оборудования</p>
+        </section>
+        <section class="service-preview">
+            <div class="catalog-cards">
+                <div class="catalog-card">
+                    <h3>Гарантийный сервис</h3>
+                    <p>Обслуживание в период гарантии</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
+                </div>
+                <div class="catalog-card">
+                    <h3>Постгарантийный сервис</h3>
+                    <p>Техническое обслуживание и ремонт</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
+                </div>
+                <div class="catalog-card">
+                    <h3>Пуско-наладка</h3>
+                    <p>Запуск и настройка оборудования</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
+                </div>
+                <div class="catalog-card">
+                    <h3>Запасные части</h3>
+                    <p>Поставка оригинальных запчастей</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
+                </div>
             </div>
         </section>
     </main>
@@ -58,4 +60,4 @@
         <span>Сделано с любовью и вниманием к деталям</span>
     </footer>
 </body>
-</html> 
+</html>
