--- a/pages/tools.html
+++ b/pages/tools.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Инструмент | ООО АКСТА</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
         </div>
         <nav class="nav">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="catalog.html">Каталог</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
@@ -26,23 +26,31 @@
         </nav>
     </header>
     <main>
+        <section class="hero">
+            <h1>Металлорежущий инструмент</h1>
+            <p>Качественный инструмент от ведущих производителей</p>
+        </section>
         <section class="catalog-preview">
-            <h1>Инструмент и оснастка</h1>
             <div class="catalog-cards">
                 <div class="catalog-card">
-                    <h3>Китай</h3>
-                    <p>Металлорежущий инструмент, оснастка, расходники</p>
-                    <a href="#" class="btn-secondary">Подробнее</a>
+                    <h3>Фрезы</h3>
+                    <p>Концевые, торцевые, шпоночные фрезы</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
                 </div>
                 <div class="catalog-card">
-                    <h3>Япония</h3>
-                    <p>Премиальный инструмент, высокое качество</p>
-                    <a href="#" class="btn-secondary">Подробнее</a>
+                    <h3>Сверла</h3>
+                    <p>Спиральные, центровочные, ступенчатые сверла</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
                 </div>
                 <div class="catalog-card">
-                    <h3>Корея</h3>
-                    <p>Инновационные решения, оптимальная цена</p>
-                    <a href="#" class="btn-secondary">Подробнее</a>
+                    <h3>Резцы</h3>
+                    <p>Токарные резцы различных типов</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
+                </div>
+                <div class="catalog-card">
+                    <h3>Оснастка</h3>
+                    <p>Патроны, цанги, державки</p>
+                    <a href="anketa.html" class="btn-secondary">Заказать</a>
                 </div>
             </div>
         </section>
@@ -52,4 +60,4 @@
         <span>Сделано с любовью и вниманием к деталям</span>
     </footer>
 </body>
-</html> 
+</html>
