--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог оборудования | ООО АКСТА</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
         </div>
         <nav class="nav">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="catalog.html">Каталог</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
@@ -72,4 +72,4 @@
         <span>Сделано с любовью и вниманием к деталям</span>
     </footer>
 </body>
-</html> 
+</html>
