--- a/pages/news.html
+++ b/pages/news.html
@@ -2,10 +2,9 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Новости | ООО АКСТА</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Новости | ООО АКСТА</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
     <header class="header">
