Fix CSS path in anketa.html

--- a/pages/anketa.html
+++ b/pages/anketa.html
@@ -2,9 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Опросный лист | ООО АКСТА</title>
-    <link rel="stylesheet" href="../styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <title>Опросный лист | ООО АКСТА</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <script defer src="../assets/js/main.js"></script>
 </head>
 <body>
@@ -12,9 +11,8 @@
         <div class="logo-block">
             <span class="logo">ооо<span class="logo-accent">АКСТА</span></span>
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
-        </div>
-        <nav class="nav">
-            <a href="index.html">Главная</a>
+        </div>        <nav class="nav">
+            <a href="../index.html">Главная</a>
             <a href="catalog.html">Каталог</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
