--- a/pages/anketa.html
+++ b/pages/anketa.html
@@ -51,6 +51,9 @@
                 <p>По всем вопросам вы можете связаться с менеджером:<br>Яна<br>+7 963 135 48 37<br><a href="mailto:sale_aksta@stankirb.ru">sale_aksta@stankirb.ru</a></p>
             </div>
         </section>
+        
+        <!-- Toast для уведомлений -->
+        <div id="toast-notification" class="toast-notification" style="display: none;"></div>
     </main>
     <footer class="footer">
         <span>© ООО «АКСТА», 2024</span>
