--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -158,14 +158,17 @@
                     <button class="btn-secondary" disabled>Следующая</button>
                 </div>
             </div>
+            </div>
         </div>
         
         <!-- Toast Notification -->
         <div id="toast-notification" class="toast-notification" style="display: none;"></div>
     </main>
     <footer class="footer">
-        <span>© ООО «АКСТА», 2024</span>
-        <span>Сделано с любовью и вниманием к деталям</span>
+        <div class="container">
+            <span>© ООО «АКСТА», 2024</span>
+            <span>Сделано с любовью и вниманием к деталям</span>
+        </div>
     </footer>
 </body>
 </html>
