modified:   README.md 	modified:   assets/css/styles.css 	modified:   assets/js/main.js 	modified:   index.html 	modified:   pages/anketa.html 	modified:   pages/cart.html 	modified:   pages/catalog.html 	modified:   pages/education.html 	modified:   pages/news.html 	modified:   pages/service.html 	modified:   pages/tools.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <nav class="nav">
             <a href="index.html">Главная</a>
-            <a href="pages/catalog.html">Каталог</a>
+            <a href="pages/catalog.html">Оборудование</a>
             <a href="pages/tools.html">Инструмент</a>
             <a href="pages/service.html">Сервис</a>
             <a href="pages/education.html">Обучение</a>
@@ -96,7 +96,7 @@
         </section>
         <section id="about" class="about">
             <h2>О компании</h2>
-            <p>ООО «АКСТА» — молодая компания на рынке РФ по поставке качественного металлообрабатывающего оборудования, инструмента и оснастки ведущих заводов-изготовителей. Мы предлагаем:</p>
+            <p>ООО «АКСТА» — динамично-развивающаяся компания на рынке РФ по поставке качественного металлообрабатывающего оборудования, инструмента и оснастки ведущих заводов-изготовителей. Мы предлагаем:</p>
             <ul>
                 <li>Поставку оборудования и инструмента</li>
                 <li>Запасные части</li>
@@ -135,8 +135,8 @@
         </section>
         <section id="contacts" class="contacts">
             <h2>Контакты</h2>
-            <p>Яна<br>+7 963 135 48 37<br><a href="mailto:sale_aksta@stankirb.ru">sale_aksta@stankirb.ru</a></p>
-            <p>450050, Республика Башкортостан, г. Уфа, ул. Дагестанская д.14/1, кв.83</p>
+            <p>Яна<br>+7 963 135 48 37<br><a href="mailto:aksta.llc@gmail.com">aksta.llc@gmail.com</a></p>
+            <p>450050, Республика Башкортостан, г. Уфа, ул. Дагестанская д.14/1</p>
         </section>
     </main>
     
@@ -166,7 +166,7 @@
                     <div class="footer-contact">
                         <p><strong>Яна</strong></p>
                         <p><a href="tel:+79631354837" class="contact-link">📞 +7 963 135 48 37</a></p>
-                        <p><a href="mailto:sale_aksta@stankirb.ru" class="contact-link">📧 sale_aksta@stankirb.ru</a></p>
+                        <p><a href="mailto:aksta.llc@gmail.com" class="contact-link">📧 aksta.llc@gmail.com</a></p>
                     </div>
                 </div>
                 
@@ -174,7 +174,7 @@
                     <h4>Адрес</h4>
                     <p class="footer-address">
                         450050, Республика Башкортостан,<br>
-                        г. Уфа, ул. Дагестанская д.14/1, кв.83
+                        г. Уфа, ул. Дагестанская д.14/1
                     </p>
                 </div>
             </div>
