--- a/pages/anketa.html
+++ b/pages/anketa.html
@@ -13,12 +13,12 @@
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
         </div>        <nav class="nav">
             <a href="../index.html">Главная</a>
-            <a href="catalog.html">Каталог</a>
+            <a href="catalog.html">Оборудование</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
             <a href="news.html">Новости</a>
-            <a href="cart.html">Корзина</a>
+            <a href="cart.html">Корзина <span class="cart-counter"></span></a>
             <a href="anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
         </nav>
@@ -48,7 +48,7 @@
                 <button type="submit" class="btn-main">Отправить анкету</button>
             </form>
             <div class="anketa-contact">
-                <p>По всем вопросам вы можете связаться с менеджером:<br>Яна<br>+7 963 135 48 37<br><a href="mailto:sale_aksta@stankirb.ru">sale_aksta@stankirb.ru</a></p>
+                <p>По всем вопросам вы можете связаться с менеджером:<br>Яна<br>+7 963 135 48 37<br><a href="mailto:aksta.llc@gmail.com">aksta.llc@gmail.com</a></p>
             </div>
         </section>
         
