--- a/pages/news.html
+++ b/pages/news.html
@@ -14,7 +14,7 @@
         </div>
         <nav class="nav">
             <a href="../index.html">Главная</a>
-            <a href="catalog.html">Каталог</a>
+            <a href="catalog.html">Оборудование</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
@@ -27,6 +27,14 @@
     <main>
         <!-- News Hero -->
         <section class="news-hero">
+            <div class="hero-background">
+                <div class="hero-particles"></div>
+                <div class="hero-shapes">
+                    <div class="shape shape-1"></div>
+                    <div class="shape shape-2"></div>
+                    <div class="shape shape-3"></div>
+                </div>
+            </div>
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-badge">
@@ -110,7 +118,7 @@
                         <div class="contact-info">
                             <p><strong>Яна</strong></p>
                             <p><a href="tel:+79631354837" class="contact-link">📞 +7 963 135 48 37</a></p>
-                            <p><a href="mailto:sale_aksta@stankirb.ru" class="contact-link">📧 sale_aksta@stankirb.ru</a></p>
+                            <p><a href="mailto:aksta.llc@gmail.com" class="contact-link">📧 aksta.llc@gmail.com</a></p>
                         </div>
                         <a href="anketa.html" class="btn-contact">📝 Написать нам</a>
                     </div>
