--- a/test-catalog.html
+++ b/test-catalog.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="nav">
             <a href="index.html">Главная</a>
-            <a href="pages/catalog.html">Каталог</a>
+            <a href="pages/catalog.html">Оборудование</a>
             <a href="pages/tools.html">Инструмент</a>
             <a href="pages/service.html">Сервис</a>
             <a href="pages/education.html">Обучение</a>
