--- a/pages/cart.html
+++ b/pages/cart.html
@@ -13,13 +13,13 @@
             <span class="logo-desc">- оборудование<br>- инструмент<br>- технология</span>
         </div>
         <nav class="nav">
-            <a href="index.html">Главная</a>
-            <a href="catalog.html">Каталог</a>
+            <a href="../index.html">Главная</a>
+            <a href="catalog.html">Оборудование</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
             <a href="news.html">Новости</a>
-            <a href="cart.html">Корзина</a>
+            <a href="cart.html">Корзина <span class="cart-counter"></span></a>
             <a href="anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
         </nav>
@@ -115,8 +115,8 @@
                                         <a href="tel:+79631354837" class="contact-link">
                                             📱 +7 963 135 48 37
                                         </a>
-                                        <a href="mailto:sale_aksta@stankirb.ru" class="contact-link">
-                                            ✉️ sale_aksta@stankirb.ru
+                                        <a href="mailto:aksta.llc@gmail.com" class="contact-link">
+                                            ✉️ aksta.llc@gmail.com
                                         </a>
                                     </div>
                                 </div>
@@ -151,11 +151,11 @@
                                 <small>+7 963 135 48 37 (Яна)</small>
                             </div>
                         </a>
-                        <a href="mailto:sale_aksta@stankirb.ru" class="question-option">
+                        <a href="mailto:aksta.llc@gmail.com" class="question-option">
                             <div class="option-icon">✉️</div>
                             <div class="option-content">
                                 <strong>Написать на email</strong>
-                                <small>sale_aksta@stankirb.ru</small>
+                                <small>aksta.llc@gmail.com</small>
                             </div>
                         </a>
                     </div>
