--- a/pages/education.html
+++ b/pages/education.html
@@ -15,7 +15,7 @@
         </div>
         <nav class="nav">
             <a href="../index.html">Главная</a>
-            <a href="catalog.html">Каталог</a>
+            <a href="catalog.html">Оборудование</a>
             <a href="tools.html">Инструмент</a>
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
@@ -28,6 +28,14 @@
     <main>
         <!-- Education Hero -->
         <section class="education-hero">
+            <div class="hero-background">
+                <div class="hero-particles"></div>
+                <div class="hero-shapes">
+                    <div class="shape shape-1"></div>
+                    <div class="shape shape-2"></div>
+                    <div class="shape shape-3"></div>
+                </div>
+            </div>
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-badge">
