modified:   assets/css/styles.css 	modified:   assets/js/main.js 	new file:   "catalogs/2025Bright Tools\351\207\221\346\235\260\346\240\267\345\206\214.pdf" 	new file:   catalogs/BasiX.pdf 	new file:   catalogs/KTA-Product-Catalouge.pdf 	new file:   "catalogs/\320\230\320\275\321\201\321\202\321\200\321\203\320\274\320\265\320\275\321\202 \320\264\320\273\321\217 \321\200\320\276\321\201\321\201\320\270\320\271\321\201\320\272\320\276\320\263\320\276 \321\200\321\213\320\275\320\272\320\260.pdf" 	new file:   "catalogs/\320\235\320\276\320\262\321\213\320\265 \320\272\320\260\321\202\320\260\320\273\320\276\320\263\320\270 2025_[2025] \320\241\320\262\320\265\321\200\320\273\320\265\320\275\320\270\320\265.pdf" 	new file:   "catalogs/\320\235\320\276\320\262\321\213\320\265 \320\272\320\260\321\202\320\260\320\273\320\276\320\263\320\270 2025_[2025] \320\244\321\200\320\265\320\267\320\265\321\200\320\276\320\262\320\260\320\275\320\270\320\265.pdf" 	new file:   "catalogs/\320\235\320\276\320\262\321\213\320\265 \320\272\320\260\321\202\320\260\320\273\320\276\320\263\320\270 2_[2025] Inserts.pdf" 	new file:   "catalogs/\320\235\320\276\320\262\321\213\320\265 \320\272\320\260\321\202\320\260\320\273\320\276\320\263\320\270 2_[2025]Threading.pdf" 	new file:   "catalogs/\320\236\321\202\321\200\320\265\320\267\320\272\320\260 \320\270 \320\276\320\261\321\200\320\260\320\261\320\276\321\202\320\272\320\260 \320\272\320\260\320\275\320\260\320\262\320\276\320\272 NEW 2025.pdf" 	new file:   "catalogs/\320\244\321\200\320\265\320\267\320\265\321\200\320\275\321\213\320\265 \320\272\320\276\321\200\320\277\321\203\321\201\320\260 NEW 2025.pdf" 	modified:   index.html 	modified:   pages/anketa.html 	modified:   pages/cart.html 	modified:   pages/catalog.html 	new file:   pages/contacts.html 	modified:   pages/education.html 	modified:   pages/news.html 	modified:   pages/service.html 	modified:   pages/tools.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a href="pages/service.html">Сервис</a>
             <a href="pages/education.html">Обучение</a>
             <a href="pages/news.html">Новости</a>
+            <a href="pages/contacts.html">Контакты</a>
             <a href="pages/cart.html">Корзина</a>
             <a href="pages/anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
@@ -135,8 +136,7 @@
         </section>
         <section id="contacts" class="contacts">
             <h2>Контакты</h2>
-            <p>Яна<br>+7 963 135 48 37<br><a href="mailto:aksta.llc@gmail.com">aksta.llc@gmail.com</a></p>
-            <p>450050, Республика Башкортостан, г. Уфа, ул. Дагестанская д.14/1</p>
+            <a href="pages/contacts.html" class="btn-main">Перейти к контактам →</a>
         </section>
     </main>
     
