--- a/pages/tools.html
+++ b/pages/tools.html
@@ -20,6 +20,7 @@
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
             <a href="news.html">Новости</a>
+            <a href="contacts.html">Контакты</a>
             <a href="cart.html">Корзина <span class="cart-counter"></span></a>
             <a href="anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
@@ -255,7 +256,7 @@
                         <h3 class="manufacturer-country"><span class="country-flag">🇷🇺</span><span class="country-name">Россия</span></h3>
                         <div class="manufacturer-brands">
                             <span class="brand-tag local">Blum</span>
-                            <span class="brand-tag">Инсистенс [снс1]</span>
+                            <span class="brand-tag">Инсистенс</span>
                         </div>
                     </div>
                 </div>
