--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -21,6 +21,7 @@
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
             <a href="news.html">Новости</a>
+            <a href="contacts.html">Контакты</a>
             <a href="cart.html">Корзина <span class="cart-counter"></span></a>
             <a href="anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
@@ -79,7 +80,30 @@
                         <p>Американское производственное оборудование</p>
                         <a href="../catalogs/US Wheeler-Catalog.pdf" download class="btn-download">📥 Скачать PDF</a>
                     </div>
+                    <div class="catalog-download-card">
+                        <h3><span class="catalog-icon">🛠️</span> Инструмент и оснастка</h3>
+                        <p>Каталог инструмента и оснастки для металлообработки</p>
+                        <a href="../catalogs/Инструмент_оснастка.pdf" download class="btn-download">📥 Скачать PDF</a>
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- All Catalog Files (auto listing placeholder) -->
+        <section class="all-catalogs">
+            <div class="container">
+                <h2>📚 Все доступные каталоги</h2>
+                <p>Собрание файлов из папки <code>/catalogs</code>. Автоматически формируется. Можно фильтровать и скачивать.</p>
+                <div class="catalogs-toolbar">
+                    <input type="search" id="catalogSearch" placeholder="Поиск по названию..." aria-label="Поиск по каталогам" />
+                    <select id="catalogTypeFilter" aria-label="Фильтр по типу">
+                        <option value="">Все типы</option>
+                        <option value="pdf">PDF</option>
+                        <option value="xlsx">Excel</option>
+                    </select>
+                    <div class="catalogs-stats" aria-live="polite"></div>
+                </div>
+                <div class="all-catalogs-grid catalogs-strip" id="allCatalogsGrid" role="list" aria-label="Каталоги"></div>
             </div>
         </section>
         
