--- a/pages/service.html
+++ b/pages/service.html
@@ -20,6 +20,7 @@
             <a href="service.html">Сервис</a>
             <a href="education.html">Обучение</a>
             <a href="news.html">Новости</a>
+            <a href="contacts.html">Контакты</a>
             <a href="cart.html">Корзина <span class="cart-counter"></span></a>
             <a href="anketa.html">Анкета</a>
             <button id="theme-toggle" aria-label="Переключить тему"></button>
